--- a/index.html
+++ b/index.html
@@ -1085,9 +1085,9 @@ style='font-size:12.0pt;line-height:106%;mso-bidi-font-family:Calibri;
 mso-bidi-theme-font:minor-latin;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
  id="Picture_x0020_3" o:spid="_x0000_i1054" type="#_x0000_t75" alt="Table&#10;&#10;Description automatically generated"
  style='width:172.5pt;height:126.5pt;visibility:visible;mso-wrap-style:square'>
- <v:imagedata src="index_files/image003.png" o:title="Table&#10;&#10;Description automatically generated"/>
+ <v:imagedata src="index_files/image002.png" o:title="Table&#10;&#10;Description automatically generated"/>
 </v:shape><![endif]--><![if !vml]><img width=230 height=169
-src="index_files/image004.png" alt="Table&#10;&#10;Description automatically generated"
+src="index_files/image003.png" alt="Table&#10;&#10;Description automatically generated"
 v:shapes="Picture_x0020_3"><![endif]></span><span style='mso-no-proof:yes'><!--[if gte vml 1]><v:shape
  id="Picture_x0020_4" o:spid="_x0000_i1053" type="#_x0000_t75" alt="Table&#10;&#10;Description automatically generated"
  style='width:177.5pt;height:128pt;visibility:visible;mso-wrap-style:square'>
@@ -1798,7 +1798,7 @@ Calibri;mso-bidi-theme-font:minor-latin'><o:p>&nbsp;</o:p></span></p>
 
 <p class=MsoListParagraphCxSpFirst style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='font-size:12.0pt;line-height:106%;font-family:Symbol;mso-fareast-font-family:
-Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>·<span
+Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>ï¿½<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span></span><![endif]><span
 dir=LTR></span><span style='font-size:12.0pt;line-height:106%;mso-bidi-font-family:
 Calibri;mso-bidi-theme-font:minor-latin'>Utilizing cross-validation techniques
@@ -1806,7 +1806,7 @@ to evaluate the model's performance and prevent overfitting.<o:p></o:p></span></
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='font-size:12.0pt;line-height:106%;font-family:Symbol;mso-fareast-font-family:
-Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>·<span
+Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>ï¿½<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span></span><![endif]><span
 dir=LTR></span><span style='font-size:12.0pt;line-height:106%;mso-bidi-font-family:
 Calibri;mso-bidi-theme-font:minor-latin'>Fine-tuning the hyperparameters of the
@@ -1815,7 +1815,7 @@ optimize their performance.<o:p></o:p></span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='font-size:12.0pt;line-height:106%;font-family:Symbol;mso-fareast-font-family:
-Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>·<span
+Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>ï¿½<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span></span><![endif]><span
 dir=LTR></span><span style='font-size:12.0pt;line-height:106%;mso-bidi-font-family:
 Calibri;mso-bidi-theme-font:minor-latin'>Incorporating additional relevant data
@@ -1824,7 +1824,7 @@ underlying relationship.<o:p></o:p></span></p>
 
 <p class=MsoListParagraphCxSpLast style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='font-size:12.0pt;line-height:106%;font-family:Symbol;mso-fareast-font-family:
-Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>·<span
+Symbol;mso-bidi-font-family:Symbol'><span style='mso-list:Ignore'>ï¿½<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span></span><![endif]><span
 dir=LTR></span><span style='font-size:12.0pt;line-height:106%;mso-bidi-font-family:
 Calibri;mso-bidi-theme-font:minor-latin'>Regularly evaluating and monitoring
